[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Minimap.gd" type="Script" id=1]
[ext_resource path="res://assets/minimap/player.png" type="Texture" id=2]
[ext_resource path="res://assets/minimap/enemy.png" type="Texture" id=3]
[ext_resource path="res://assets/minimap/wall.png" type="Texture" id=4]
[ext_resource path="res://assets/minimap/background.png" type="Texture" id=5]

[node name="Minimap" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 453.5, 173.5 )
scale = Vector2( 1.83167, 1.88167 )
texture = ExtResource( 5 )

[node name="PlayerMarker" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="EnemyMarker" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="WallMarker" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
